{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 55,
  "lineage": "89f64bee-8bc3-6e37-f925-49a11c19fe46",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0f0e84f13da8c6bf6",
            "domain": "vpc",
            "id": "eipalloc-00f55d653a268027e",
            "network_border_group": "us-east-2",
            "network_interface": "eni-07ba88c5b97b85d7e",
            "private_dns": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-15-84-23.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.84.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web_traffic",
            "aws_subnet.subnet-1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:304469244449:instance/i-05b307d732d8bf3ea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05b307d732d8bf3ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "hari-aws-key-east-2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-033f2332710727f11",
            "private_dns": "ip-172-31-16-205.us-east-2.compute.internal",
            "private_ip": "172.31.16.205",
            "public_dns": "ec2-18-117-135-158.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.135.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08ef5604598df7bcd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_web_traffic"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-5c03f121",
            "tags": {
              "Name": "my-app"
            },
            "tags_all": {
              "Name": "my-app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00e32447c8f47ecb5"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_web_traffic",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:304469244449:internet-gateway/igw-08343501d60f78863",
            "id": "igw-08343501d60f78863",
            "owner_id": "304469244449",
            "vpc_id": "vpc-000bc153bd7320c3e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-07ba88c5b97b85d7e",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:eb:be:66:d3:ae",
            "private_dns_name": "ip-10-0-1-50.us-east-2.compute.internal",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-040d3e97708c526b3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01359449152e1ac83"
          },
          "dependencies": [
            "aws_security_group.allow_web_traffic",
            "aws_subnet.subnet-1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:304469244449:route-table/rtb-02731714069ee6a9c",
            "id": "rtb-02731714069ee6a9c",
            "owner_id": "304469244449",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08343501d60f78863",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08343501d60f78863",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-Public-RouteTable"
            },
            "tags_all": {
              "Name": "dev-Public-RouteTable"
            },
            "vpc_id": "vpc-000bc153bd7320c3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0691be907b9c43688",
            "route_table_id": "rtb-02731714069ee6a9c",
            "subnet_id": "subnet-01359449152e1ac83"
          },
          "dependencies": [
            "aws_internet_gateway.dev-gw",
            "aws_route_table.dev-route-table",
            "aws_subnet.subnet-1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:304469244449:security-group/sg-040d3e97708c526b3",
            "description": "Allow Web inbound traffic",
            "egress": [],
            "id": "sg-040d3e97708c526b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Concourse",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS for secured ports",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "174.101.241.104/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "304469244449",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-app"
            },
            "tags_all": {
              "Name": "my-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-000bc153bd7320c3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:304469244449:subnet/subnet-01359449152e1ac83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01359449152e1ac83",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304469244449",
            "tags": {
              "Name": "dev-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "dev-Public-Subnet-1"
            },
            "vpc_id": "vpc-000bc153bd7320c3e"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:304469244449:vpc/vpc-000bc153bd7320c3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0adabe63294349cb7",
            "default_route_table_id": "rtb-02dceaf19a1723bdd",
            "default_security_group_id": "sg-0285cdb076ea73be5",
            "dhcp_options_id": "dopt-3cc8be57",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-000bc153bd7320c3e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02dceaf19a1723bdd",
            "owner_id": "304469244449",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}